feat(dop): issue detail v2 released :tada:

--- a/locales/en.json
+++ b/locales/en.json
@@ -78,6 +78,7 @@
     "July": "July",
     "June": "June",
     "Kuala lumpur": "Kuala lumpur",
+    "Log": "Log",
     "London": "London",
     "Malaysia": "Malaysia",
     "March": "March",
@@ -105,7 +106,6 @@
     "Permanently delete {deleteItem}. Please pay special attention to it.": "Permanently delete {deleteItem}. Please pay special attention to it.",
     "Personal workbench": "Personal workbench",
     "Pipeline": "Pipeline",
-    "Please enter a valid DingTalk address.": "Please enter a valid DingTalk address.",
     "Please enter a valid version number, such as x.y.z.": "please enter a valid version number，such as x.y.z",
     "Please enter address started with http": "please enter a valid instance address starting with http:// or https://",
     "Please enter nickname, name, email or mobile phone number to search.": "Please enter a member name to search",
@@ -213,7 +213,6 @@
     "applicant": "applicant",
     "application": "application",
     "application instance": "application instance",
-    "application performance": "application performance",
     "application resource": "application resource",
     "application role": "application role",
     "applied successfully": "applied successfully",
@@ -269,7 +268,6 @@
     "bug": "bug",
     "by fixed bandwidth": "by fixed bandwidth",
     "by flow": "by flow",
-    "cache": "cache",
     "can not be empty": "can not be empty",
     "can not be nodeName": "can not be nodeName",
     "can not start with number": "can not start with number",
@@ -532,6 +530,7 @@
     "item {index} should be lowercase letters, numbers, dot, -, *": "item {index} should be lowercase letters, numbers, dot, -, *",
     "join org": "join org",
     "join {orgName}": "join {orgName}",
+    "joined apps": "joined apps",
     "joined organization successfully": "joined organization successfully",
     "jump server": "jump server",
     "key": "key",
@@ -684,7 +683,6 @@
     "please enter": "please enter",
     "please enter a description": "please enter a description",
     "please enter a number between {min} ~ {max}": "please enter a number between {min} ~ {max}",
-    "please enter a valid email address": "please enter a valid email address",
     "please enter a valid ip, separated by a semicolon or a space": "please enter a valid ip, separated by a semicolon or a space",
     "please enter an integer between 1 ~ 65535!": "please enter an integer between 1 ~ 65535!",
     "please enter the correct format": "please enter the correct format",
@@ -794,7 +792,6 @@
     "rest": "rest",
     "restore": "restore",
     "result": "result",
-    "return to previous page": "return to previous page",
     "revert deprecated version": "revert deprecated version",
     "revoke": "revoke",
     "revoked": "revoked",
