--- a/locales/zh.json
+++ b/locales/zh.json
@@ -78,6 +78,7 @@
     "July": "7月",
     "June": "6月",
     "Kuala lumpur": "吉隆坡",
+    "Log": "日志",
     "London": "伦敦",
     "Malaysia": "马来西亚",
     "March": "3月",
@@ -105,7 +106,6 @@
     "Permanently delete {deleteItem}. Please pay special attention to it.": "永久删除{deleteItem}，请谨慎操作",
     "Personal workbench": "个人工作台",
     "Pipeline": "流水线",
-    "Please enter a valid DingTalk address.": "请输入正确钉钉地址",
     "Please enter a valid version number, such as x.y.z.": "请输入有效的版本号, 如：x.y.z",
     "Please enter address started with http": "请输入以http://或https://开头的有效实例地址",
     "Please enter nickname, name, email or mobile phone number to search.": "请输入成员名搜索",
@@ -213,7 +213,6 @@
     "applicant": "申请人员",
     "application": "应用",
     "application instance": "应用实例",
-    "application performance": "应用性能",
     "application resource": "应用资源",
     "application role": "应用角色",
     "applied successfully": "申请成功",
@@ -269,7 +268,6 @@
     "bug": "缺陷",
     "by fixed bandwidth": "按固定带宽",
     "by flow": "按流量",
-    "cache": "缓存",
     "can not be empty": "不能为空",
     "can not be nodeName": "值不能为nodeName",
     "can not start with number": "不能以数字开头",
@@ -532,6 +530,7 @@
     "item {index} should be lowercase letters, numbers, dot, -, *": "第{index}项请输入小写字母、数字、-、*、.",
     "join org": "加入组织",
     "join {orgName}": "加入 {orgName}",
+    "joined apps": "加入的应用",
     "joined organization successfully": "加入组织成功",
     "jump server": "跳板机",
     "key": "标示",
@@ -684,7 +683,6 @@
     "please enter": "请输入",
     "please enter a description": "请输入描述",
     "please enter a number between {min} ~ {max}": "请输入{min}~{max}之间的数字",
-    "please enter a valid email address": "请输入正确邮箱地址",
     "please enter a valid ip, separated by a semicolon or a space": "请输入有效的ip，以分号、或空格分隔",
     "please enter an integer between 1 ~ 65535!": "请输入 1 ~ 65535 之间的整数!",
     "please enter the correct format": "请输入正确格式",
@@ -794,7 +792,6 @@
     "rest": "重置",
     "restore": "恢复",
     "result": "结果",
-    "return to previous page": "返回上一页面",
     "revert deprecated version": "撤销弃用版本",
     "revoke": "撤销",
     "revoked": "已撤销",
