--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -811,9 +811,9 @@
     "Branch binds environment in the platform. The branch code can only be deployed to the environment selected below by CI/CD pipeline.": "平台中分支绑定环境，该分支代码通过平台 CI/CD 流水线后仅能部署到下面选择的环境中",
     "Built-in code base": "内置代码库",
     "Business-app-intro": "业务应用主要是指处理某一类业务流程的微服务组合，比如会员管理的业务应用。",
+    "Click here to comment": "点击此处发表评论",
     "Code scanning configuration is mainly divided into rule configuration and code quality access control configuration. When the access control rules are met, it means that the code quality threshold cannot be passed.": "代码扫描配置主要分为规则配置和代码质量门禁配置，其中门禁规则满足的情况下，代表代码质量门槛不能通过",
     "Collapse": "收起",
-    "Comment ({meta} + Enter to send)": "评论 ({meta} + Enter 发送)",
     "Comment ({meta} + Enter to send, Esc to collapse)": "评论 ({meta} + Enter 发送, Esc 收起)",
     "Config content": "配置内容",
     "Config import": "配置导入",
@@ -839,6 +839,8 @@
     "Git reference": "Git 引用",
     "If it is a bugfix, please add a test case proving that the bug is fixed.": "如果是 bugfix，请增加证明 bug 解决的 testcase",
     "If you choose to configure an external code repository, the DevOps platform will no longer provide functions such as  code browsing, submission history viewing, branch management or merge requests. Other functions such as pipeline and deployment will not be affected.": "选择配置外置代码仓库后，DevOps 平台将不再提供代码浏览、提交历史查看、分支管理和合并请求等在线代码仓库功能，流水线和部署中心等其他功能不受影响。",
+    "Include": "包含",
+    "Issue": "事项",
     "It can only be dragged to the end of the corresponding month. Please go to the details page for better modification.": "本次拖拽只能拖拽至对应月末, 请至详情页进行精确修改",
     "It cannot be restored if completely deleted.": "彻底删除后，将无法恢复，",
     "It is being saved and it will take effect later.": "正在保存, 稍后生效",
@@ -865,15 +867,17 @@
     "Please enter the issue title": "请输入事项标题",
     "Please enter the repository address started with http or https.": "请输入以http或https开头的仓库地址",
     "Please fill in the json expression of obtained target key to determine if the key exists.": "值请填获取目标key的json表达式，以判断该key是否存在。",
+    "Post": "发表",
     "Project homepage": "主页",
     "Projects": "项目管理",
     "Rendering multi-layer nested structures is not supported at this time, please go to text mode.": "暂不支持渲染多层嵌套结构，请前往文本模式。",
+    "Reference": "引用",
     "Scenes": "场景集合",
     "Search for the test plan I am involved in/responsible for.": "搜索我参与/负责的测试计划",
-    "Send": "发送",
     "System built-in Git repository": "系统内置Git仓库",
     "Tags can be used for issue and test management, to quickly locate and filter relevant content.": "标签可以用于事项管理、测试管理中，合理使用能够快速定位和过滤相关内容",
     "Tell about your project in one sentence, so that more people can quickly understand your project, go to": "用一句话讲述你的项目，让更多的人快速了解你的项目，前往",
+    "Testcase": "用例",
     "The application cannot be restored after deletion.Please enter {name} to confirm.": "应用删除后无法恢复，请输入 {name} 进行确认",
     "The artifact is a release product of pipeline, and the environment selected below can be directly deployed by the artifact of this branch.": "制品为 Pipeline 中的 release 产物，下面所选环境能够通过该分支的制品直接部署",
     "The creation of the service takes a while, please wait a moment": "服务的创建需要一段时间，请稍等片刻",
@@ -903,6 +907,8 @@
     "Today is {time}": "今天是 {time}",
     "Up to 255 characters for directory name": "目录名最大长度255",
     "Up to 255 characters for url path": "url 路径最多255个字符",
+    "Updated the title": "更新了标题",
+    "Updated the working hours": "更新了工时",
     "Wait deploy": "等待部署",
     "When enabled, application deployment needs to be reviewed and approved by the project administrator.": "开启后，相关应用部署需要项目管理员审核同意后才能继续进行",
     "When you click directly, it will execute cases without environment.": "直接点击时，所选环境为无环境",
@@ -971,7 +977,6 @@
     "application name": "应用名称",
     "application pipeline": "应用流水线",
     "application setting": "应用设置",
-    "application type": "应用类型",
     "application-branch-rule-desc": "应用分支规则主要是对应用代码分支的保护和持续集成的开关设置，请根据应用实际需要合理配置。",
     "applications": "应用列表",
     "apply": "使用",
@@ -1019,7 +1024,6 @@
     "batch processing": "批量处理",
     "batch-delete-tip-content": "该扫描规则将永久删除",
     "be formal": "转正式",
-    "be related by these issues": "被以下事项关联",
     "be sure to make {name} official?": "确认将 {name} 转为正式制品?",
     "belong to, not belong to": "属于、不属于",
     "belongs to": "属于",
@@ -1344,7 +1348,6 @@
     "import parameters": "导入参数",
     "import source": "引入源",
     "import use case": "引入用例",
-    "included tasks": "包含的任务",
     "informal": "非正式",
     "initiated": "我发起的",
     "input bug name": "输入缺陷名称",
@@ -1672,10 +1675,8 @@
     "refresh every {time}, click to refresh now": "每{time}刷新，点击立即刷新",
     "registration center": "注册中心",
     "related issue type": "关联事项类型",
-    "related mr": "关联的合并请求",
     "related task": "关联任务",
     "related test case": "关联的测试用例",
-    "related to these issues": "关联了以下事项",
     "relation added successfully": "添加关联成功",
     "release name": "制品名称",
     "release relationship": "解除关系",
@@ -2000,15 +2001,12 @@
     "Please enter a name consisting of letters and numbers within 20 characters.": "请输入20个字符内字母数字组成的名称",
     "Please enter a name consisting of letters, numbers and underscores within 20 characters.": "请输入20个字符内英文数字或下划线组成的名称",
     "Please enter a name consisting of letters, numbers, underscores, hyphens, slashes and dots within 50 characters.": "请输入50个字符内英文、数字、_、-、/, . 组成的名称",
-    "Please enter your DingTalk address, separated by comma.": "请输入钉钉地址，用“,”分隔",
     "Provides one-stop service system observation, including service monitoring, tracing, dashboard, and alarm.": "提供一站式的服务系统观测，包括服务监控、链路追踪、仪表盘和告警等功能。",
     "RPC call": "RPC 调用",
-    "RPC transaction": "RPC事务",
     "The selected interface weight will be set to": "所选接口权重将置为",
     "URL path": "URL 路径",
     "URL path prefix": "URL 路径前缀",
     "Waterfall Plot": "瀑布图",
-    "Web transaction": "Web事务",
     "a domain name can only contain numbers, lowercase letters, *, -": "域名只能包含数字、小写字母、*、-",
     "abnormal traffic interception": "异常流量拦截",
     "access domain": "访问域名",
@@ -2016,7 +2014,6 @@
     "access error": "访问错误",
     "access page": "访问页面",
     "access path": "访问路径",
-    "access performance trends": "访问性能趋势",
     "activated": "已启用",
     "active connections": "活跃连接数",
     "add analysis rule": "添加分析规则",
@@ -2036,15 +2033,12 @@
     "api path ascending": "API路径升序",
     "api path descending": "API路径降序",
     "api sorting": "API排序",
-    "app performance": "APP性能",
-    "app version": "APP版本",
     "appKey-field-request-argument": "请将appKey带在名为appKey的url参数上，将参数签名串带在名为sign的url参数上",
     "application": "所属应用",
     "application id": "应用 ID",
     "application name": "应用名",
     "application performance indicators (within 1 hour)": "应用性能指标(1小时内)",
     "application performance trends (within 1 hour)": "应用性能趋势(1小时内)",
-    "application version": "应用版本",
     "are you sure to delete this monitor?": "确认删除该监控？",
     "as policy name by default": "默认为策略名称",
     "ascending order": "升序",
@@ -2067,7 +2061,6 @@
     "average delay": "平均延迟",
     "average load time": "平均加载时间",
     "average load time - browser type": "平均加载时间-浏览器类型",
-    "average load time - device type": "平均加载时间-设备类型",
     "average request volume": "平均请求量",
     "average response time": "平均响应时间",
     "average throughput": "平均吞吐量",
@@ -2158,8 +2151,6 @@
     "custom address": "自定义地址",
     "custom domain name": "自定义域名",
     "custom nginx configuration": "自定义nginx配置",
-    "daily report": "日报",
-    "daily report settings": "日报设置",
     "data collection desc": "仅 Java Agent 支持异常分析和 JVM 监控，Jaeger、Open Telemetry 等数据采集方式仅支持调用链路追踪数据的分析和展示",
     "data distribution": "数据分布",
     "day": "天",
@@ -2189,9 +2180,7 @@
     "edit a endpoint": "编辑流量入口",
     "edit analysis rule": "编辑分析规则",
     "edit monitoring": "编辑监控",
-    "enable daily report": "开启日报",
     "enable rule": "开启规则",
-    "enable weekly report": "开启周报",
     "end user experience time": "最终用户体验时间",
     "endpoint": "流量入口",
     "endpoint analysis": "流量入口分析",
@@ -2254,7 +2243,6 @@
     "free service": "离群服务",
     "full text query": "全文查询",
     "gateway load": "网关负载",
-    "geography": "地理",
     "global strategy": "全局策略",
     "grayscale release": "灰度发布",
     "header-X-App-Key": "请将appKey带在名为appKey的url参数或者名为X-App-Key的请求头上",
@@ -2298,15 +2286,12 @@
     "link information": "链路信息",
     "live tail": "实时 tail",
     "load event": "load事件",
-    "location analysis": "定位分析",
     "location block configuration": "location block的配置",
     "log details": "日志详情",
     "lowercase letters, numbers, dot, -, *": "小写字母、数字、-、*、.",
-    "mail recipient": "邮件接收人",
     "manual registration": "手动注册",
     "match": "匹配",
     "match the URL path prefix, and remove the prefix": "匹配到URL路径前缀，同时移除前缀",
-    "max time-consuming(ms)": "最大耗时(ms)",
     "maximum concurrency": "最大并发",
     "maximum delay": "最大延迟",
     "maximum extra delay": "最大额外延时",
@@ -2319,7 +2304,6 @@
     "method": "调用方法",
     "microService API management": "微服务API管理",
     "millisecond(s)": "毫秒",
-    "min time-consuming(ms)": "最小耗时(ms)",
     "minimum": "最小值",
     "minimum time consuming": "最小耗时",
     "monitoring frequency": "监控频率",
@@ -2344,7 +2328,6 @@
     "not match": "不匹配",
     "not satisfied": "不满意",
     "number of connection": "连接数",
-    "number of errors": "错误次数",
     "number of failed calls": "调用失败次数",
     "number of interface calls": "接口请求次数",
     "number of occurrences": "发生次数",
@@ -2368,7 +2351,6 @@
     "owned service": "所属服务",
     "page": "页面",
     "page download": "页面下载",
-    "page fault": "页面错误",
     "page jump": "页面跳转",
     "page performance indicator (within 1 hour)": "页面性能指标(1小时内)",
     "page performance trends": "页面性能趋势",
@@ -2390,14 +2372,12 @@
     "please enter description within 100 characters": "请输入100字以内的描述",
     "please enter http status code ": "请输入http状态码",
     "please enter the api already in the endpoint": "请输入流量入口中已存在API",
-    "please enter your email address, separated by comma": "请输入邮箱地址，用“,”分隔",
     "please key in numbers": "请输入数字",
     "please select a domain": "请选择域名",
     "please select module": "请选择模块",
     "policy name": "策略名称",
     "prev": "上一步",
     "previous": "上一个",
-    "project report": "项目报告",
     "proportion": "占比",
     "province": "省份",
     "query cache": "查询缓存",
@@ -2424,7 +2404,6 @@
     "request error rate": "请求错误率",
     "request limit": "请求次数限制",
     "request path": "请求路径",
-    "request performance trends": "请求性能趋势",
     "request response status": "请求响应状态",
     "request size": "请求体积",
     "request size TOP 10": "请求体积 TOP10",
@@ -2435,7 +2414,6 @@
     "response map": "响应图",
     "response size": "应答体积",
     "response size TOP 10": "应答体积 TOP10",
-    "response time TOP 5": "响应时间TOP5",
     "response traffic": "应答流量",
     "root cause analysis": "根因分析",
     "router": "路由",
@@ -2471,7 +2449,6 @@
     "service monitor": "服务监控",
     "service name": "服务名",
     "service request overview": "服务请求概览",
-    "service registration list": "服务注册列表",
     "service routing prefix": "服务路由前缀",
     "service topology": "服务拓扑",
     "set datum point": "设置基准点",
@@ -2480,7 +2457,6 @@
     "show all connected services in the current environment, as well as the key request indicators of the service in the last hour": "展示当前环境下所有接入的服务，以及该服务最近一小时内的关键请求指标",
     "skip authentication": "跳过鉴权",
     "slow call": "慢调用",
-    "slow database tracking TOP10": "慢数据库追踪TOP10",
     "slow loading tracking": "慢加载追踪",
     "slow transaction tracking": "慢事务追踪",
     "sort method": "排序方式",
@@ -2510,8 +2486,6 @@
     "this item is required": "该项为必填项",
     "throughput": "吞吐量",
     "throughput - browser type": "吞吐量-浏览器类型",
-    "throughput - device type": "吞吐量-设备类型",
-    "throughput TOP 5": "吞吐量TOP5",
     "time of occurrence": "发生时间",
     "time percentage": "时间百分比",
     "time-consuming(ms)": "耗时(ms)",
@@ -2561,8 +2535,6 @@
     "visit times": "访问次数",
     "web or app aggregation API": "Web或者APP聚合API",
     "web transaction": "web事务",
-    "weekly report": "周报",
-    "weekly report settings": "周报设置",
     "weight": "权重",
     "weight configuration": "权重配置",
     "whitelist": "白名单",
