feat(dop): create release filter optimization

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -941,7 +941,6 @@
     "addon info": "addon info",
     "addon setting": "addon setting",
     "address": "address",
-    "aggregate by branch": "aggregate by branch",
     "all": "all",
     "all issues": "all issues",
     "all iterations": "all iterations",
@@ -1518,6 +1517,7 @@
     "objectStorage": "objectStorage",
     "one click to backlog": "one click to backlog",
     "only supports collections for strings, for example: <\"abc\",\"bcd\",\"200\",\"-200\">": "only supports collections for strings, for example: <\"abc\",\"bcd\",\"200\",\"-200\">",
+    "only the latest version is displayed": "only the latest version is displayed",
     "oom": "OOM",
     "op-affect-related-app": "this operation may affect all associated apps, please be cautious!",
     "open": "open",
