feat: create release filter optimization (#3103)
* feat(dop): create release filter optimization

* feat: code optimization

--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -947,7 +947,6 @@
     "addon info": "服务信息",
     "addon setting": "服务设置",
     "address": "地址",
-    "aggregate by branch": "按分支聚合",
     "all": "全部",
     "all issues": "全部事项",
     "all iterations": "所有迭代",
@@ -1521,6 +1520,7 @@
     "objectStorage": "对象存储",
     "one click to backlog": "一键转待办",
     "only supports collections for strings, for example: <\"abc\",\"bcd\",\"200\",\"-200\">": "字符串仅支持集合，示例：<\"abc\",\"bcd\",\"200\",\"-200\">。",
+    "only the latest version is displayed": "只显示版本最新制品",
     "oom": "OOM",
     "op-affect-related-app": "此操作有可能会影响所有关联应用，请谨慎操作！",
     "open": "待处理",
