refactor: update issue detail to v3 style

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -808,6 +808,7 @@
     "Are you sure to disinclude {name}": "Are you sure to disinclude {name}",
     "Are you sure to leave, with the error message not saved?": "Are you sure to leave, with the error message not saved?",
     "Are you sure to release relationship with {name}": "Are you sure to release relationship with {name}",
+    "Basic": "Basic",
     "Branch binds environment in the platform. The branch code can only be deployed to the environment selected below by CI/CD pipeline.": "Branch binds environment in the platform. The branch code can only be deployed to the environment selected below by CI/CD pipeline.",
     "Built-in code base": "Built-in code base",
     "Business-app-intro": "Business applications mainly refer to a combination of microservices that handle certain types of business processes, such as a member management application.",
@@ -817,6 +818,7 @@
     "Comment ({meta} + Enter to send, Esc to collapse)": "Comment ({meta} + Enter to send, Esc to collapse)",
     "Config content": "Config content",
     "Config import": "Config import",
+    "Content": "Content",
     "Create a new issue, and you can drag it to the iteration on the right and set its priority.": "to create new items and arrange the priority of items by dragging to the right to iterate",
     "Create a new iteration, and you can drag the backlog on the left to an iteration and set its priority.": "Create a new iteration, and you can drag the backlog on the left to an iteration and set its priority.",
     "Custom fields common to the whole organization to meet needs of more scenarios.": "custom filed of whole company can be used in any scene",
@@ -840,6 +842,7 @@
     "If it is a bugfix, please add a test case proving that the bug is fixed.": "If it is a bugfix, please add testcase to prove the bug fix",
     "If you choose to configure an external code repository, the DevOps platform will no longer provide functions such as  code browsing, submission history viewing, branch management or merge requests. Other functions such as pipeline and deployment will not be affected.": "After choosing to the external code repository, the DevOps platform will no longer provide online code repository functions such as code browsing, commit history viewing, branch management, and merge requests, and other functions such as pipelines and deployment centers will not be affected.",
     "Include": "Include",
+    "Inclusion": "Inclusion",
     "Issue": "Issue",
     "It can only be dragged to the end of the corresponding month. Please go to the details page for better modification.": "this drag can only be dragged to the end of the corresponding month, please go to the details page for precise modification",
     "It cannot be restored if completely deleted.": "It cannot be restored if completely deleted.",
@@ -848,6 +851,7 @@
     "JSON format error": "JSON format error",
     "JVM analysis": "JVM analysis",
     "Library-app-intro": "A module/library is a code product that does not need to be deployed, and can be used in other applications after release, such as a Java jar package or npm package.",
+    "Log": "Log",
     "Management": "Management",
     "Manual entry": "Manual entry",
     "Markdown content length cannot exceed 65535 characters!": "Markdown content length cannot exceed 65535 characters!",
@@ -870,8 +874,8 @@
     "Post": "Post",
     "Project homepage": "Project homepage",
     "Projects": "Projects",
-    "Rendering multi-layer nested structures is not supported at this time, please go to text mode.": "Rendering multi-layer nested structures is not supported at this time, please go to text mode.",
     "Reference": "Reference",
+    "Rendering multi-layer nested structures is not supported at this time, please go to text mode.": "Rendering multi-layer nested structures is not supported at this time, please go to text mode.",
     "Scenes": "Scenes",
     "Search for the test plan I am involved in/responsible for.": "Search for the test plan I am involved in/responsible for.",
     "System built-in Git repository": "System built-in Git repository",
