--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -808,6 +808,7 @@
     "Are you sure to disinclude {name}": "确认解除与 {name} 的包含关系吗",
     "Are you sure to leave, with the error message not saved?": "是否确认离开，离开将不保存错误信息",
     "Are you sure to release relationship with {name}": "确认接触与 {name} 的关系吗",
+    "Basic": "基本",
     "Branch binds environment in the platform. The branch code can only be deployed to the environment selected below by CI/CD pipeline.": "平台中分支绑定环境，该分支代码通过平台 CI/CD 流水线后仅能部署到下面选择的环境中",
     "Built-in code base": "内置代码库",
     "Business-app-intro": "业务应用主要是指处理某一类业务流程的微服务组合，比如会员管理的业务应用。",
@@ -817,6 +818,7 @@
     "Comment ({meta} + Enter to send, Esc to collapse)": "评论 ({meta} + Enter 发送, Esc 收起)",
     "Config content": "配置内容",
     "Config import": "配置导入",
+    "Content": "内容",
     "Create a new issue, and you can drag it to the iteration on the right and set its priority.": "创建新事项，并可以通过拖拽至右侧迭代，安排事项的优先级",
     "Create a new iteration, and you can drag the backlog on the left to an iteration and set its priority.": "创建新迭代，并可以将左侧的待处理事项拖拽至某个迭代，安排事项的优先级",
     "Custom fields common to the whole organization to meet needs of more scenarios.": "全组织通用的自定义字段，满足更多场景需要",
@@ -840,6 +842,7 @@
     "If it is a bugfix, please add a test case proving that the bug is fixed.": "如果是 bugfix，请增加证明 bug 解决的 testcase",
     "If you choose to configure an external code repository, the DevOps platform will no longer provide functions such as  code browsing, submission history viewing, branch management or merge requests. Other functions such as pipeline and deployment will not be affected.": "选择配置外置代码仓库后，DevOps 平台将不再提供代码浏览、提交历史查看、分支管理和合并请求等在线代码仓库功能，流水线和部署中心等其他功能不受影响。",
     "Include": "包含",
+    "Inclusion": "包含",
     "Issue": "事项",
     "It can only be dragged to the end of the corresponding month. Please go to the details page for better modification.": "本次拖拽只能拖拽至对应月末, 请至详情页进行精确修改",
     "It cannot be restored if completely deleted.": "彻底删除后，将无法恢复，",
@@ -848,6 +851,7 @@
     "JSON format error": "JSON 格式错误",
     "JVM analysis": "JVM 分析",
     "Library-app-intro": "库/模块是一种不需要部署的代码产物，发布后可以在其他应用中被依赖使用，比如一个 Java jar 包或 npm 包。",
+    "Log": "日志",
     "Management": "管理",
     "Manual entry": "手动录入",
     "Markdown content length cannot exceed 65535 characters!": "Markdown 内容长度不能超过 65535 个字符!",
@@ -870,8 +874,8 @@
     "Post": "发表",
     "Project homepage": "主页",
     "Projects": "项目管理",
-    "Rendering multi-layer nested structures is not supported at this time, please go to text mode.": "暂不支持渲染多层嵌套结构，请前往文本模式。",
     "Reference": "引用",
+    "Rendering multi-layer nested structures is not supported at this time, please go to text mode.": "暂不支持渲染多层嵌套结构，请前往文本模式。",
     "Scenes": "场景集合",
     "Search for the test plan I am involved in/responsible for.": "搜索我参与/负责的测试计划",
     "System built-in Git repository": "系统内置Git仓库",
