fix: issue detail header is hidden when click anchor to scroll

--- a/locales/en.json
+++ b/locales/en.json
@@ -48,7 +48,7 @@
     "DingTalk address": "DingTalk address",
     "Dubai": "Dubai",
     "East China {num}": "East China {num}",
-    "Enter to save quickly, Enter + {meta} to save and continue": "Enter to save quickly, Enter + {meta} to save and continue",
+    "Enter to save quickly, {meta} + Enter to save and continue": "Enter to save quickly, {meta} + Enter to save and continue",
     "Europe & America": "Europe & America",
     "Expand": "Expand",
     "Fast data": "Fast data",
