fix: add missing i18n

--- a/locales/en.json
+++ b/locales/en.json
@@ -297,6 +297,7 @@
     "clear": "clear",
     "clear content": "clear content",
     "click to copy": "click to copy",
+    "click to edit description": "click to edit description",
     "click to view password": "click to view password",
     "client": "client",
     "client identifier": "client identifier",
