--- a/locales/zh.json
+++ b/locales/zh.json
@@ -297,6 +297,7 @@
     "clear": "清空",
     "clear content": "清空内容",
     "click to copy": "单击复制",
+    "click to edit description": "点击编辑描述",
     "click to view password": "点击查看密码",
     "client": "客户端",
     "client identifier": "客户端标识",
