--- a/locales/en.json
+++ b/locales/en.json
@@ -48,7 +48,7 @@
     "DingTalk address": "DingTalk address",
     "Dubai": "Dubai",
     "East China {num}": "East China {num}",
-    "Enter to save quickly, Enter + {meta} to save and continue": "Enter to save quickly, Enter + {meta} to save and continue",
+    "Enter to save quickly, {meta} + Enter to save and continue": "Enter to save quickly, {meta} + Enter to save and continue",
     "Europe & America": "Europe & America",
     "Expand": "Expand",
     "Fast data": "Fast data",
@@ -297,6 +297,7 @@
     "clear": "clear",
     "clear content": "clear content",
     "click to copy": "click to copy",
+    "click to edit description": "click to edit description",
     "click to view password": "click to view password",
     "client": "client",
     "client identifier": "client identifier",
