feat(test): add export reocrd modal
feat(dop): add api

--- a/locales/en.json
+++ b/locales/en.json
@@ -956,6 +956,7 @@
     "version": "version",
     "version list": "version list",
     "version management": "version management",
+    "version name": "version name",
     "version number": "version number",
     "view comparison results": "view results",
     "view link": "view link",
