--- a/locales/zh.json
+++ b/locales/zh.json
@@ -956,6 +956,7 @@
     "version": "版本",
     "version list": "版本列表",
     "version management": "版本管理",
+    "version name": "版本名称",
     "version number": "版本号",
     "view comparison results": "查看对比结果",
     "view link": "查看链路",
