--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -2196,6 +2196,7 @@
     "environments": "environments",
     "equal": "equal",
     "error analysis": "error analysis",
+    "error call": "error call",
     "error call times": "error call times",
     "error code": "error code",
     "error code tracking": "error code tracking",
