--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -473,7 +473,6 @@
     "please add ": "please add ",
     "please choose region": "please choose region",
     "please choose vendor": "please choose vendor",
-    "please enter IP": "please enter IP",
     "please enter a number greater than or equal to {min}": "please enter a number greater than or equal to {min}",
     "please enter an odd number no greater than {max}": "please enter an odd number no greater than {max}",
     "please enter bucket name": "please enter bucket name",
@@ -530,6 +529,7 @@
     "refer to template sample to input": "refer to template sample to input",
     "reference counts": "reference counts",
     "reference detail": "reference detail",
+    "region": "region",
     "regions-provide-intranet-default": "all regions (except public network regions) provide intranet access by default, which is safe, stable and reliable.",
     "related pod information": "related pod information",
     "report name": "report name",
@@ -618,6 +618,7 @@
     "usage rate": "usage rate",
     "used for code repositories, supports multiple repositories and choose to enable CI/CD and artifacts": "used to host code repositorys, support multiple repositorys, and choose to open CI/CD and products.",
     "used for site messages and mails": "used for site messages and mails",
+    "vendor": "vendor",
     "verification method": "verification method",
     "virginia": "virginia",
     "visit the link to join the organization": "visit the link to join the organization",
@@ -2000,7 +2001,6 @@
     "No abnormal transaction data sampled yet.": "No abnormal transaction data sampled yet.",
     "No slow transaction data sampled yet.": "No slow transaction data sampled yet.",
     "OpenAPI for partners": "OpenAPI for partners",
-    "Please enter API to search.": "Please enter API to search.",
     "Please enter a name consisting of letters and numbers within 20 characters.": "Please enter a name consisting of letters and numbers within 20 characters.",
     "Please enter a name consisting of letters, numbers and underscores within 20 characters.": "Please enter a name consisting of letters, numbers and underscores within 20 characters.",
     "Please enter a name consisting of letters, numbers, underscores, hyphens, slashes and dots within 50 characters.": "please enter a name consisting of English, numbers, _, -, /, . within 50 characters",
@@ -2126,7 +2126,6 @@
     "confirm to cancel": "confirm to cancel",
     "confirm to cancel the authorization of {path}": "confirm to cancel the authorization of {path}",
     "confirm to delete this parameter": "confirm to delete this parameter",
-    "confirm update operation": "confirm update operation",
     "connection status": "connection status",
     "consumer": "consumer",
     "consumer access condition": "consumer access condition",
@@ -2152,7 +2151,6 @@
     "current span time": "current span time",
     "currently no request": "currently no request",
     "custom address": "custom address",
-    "custom domain name": "custom domain name",
     "custom nginx configuration": "custom nginx configuration",
     "data collection desc": "only Java Agent supports exception analysis and JVM monitoring. Data collection methods such as Jaeger and Open Telemetry only support the analysis and display of call link tracking data.",
     "data distribution": "data distribution",
@@ -2166,7 +2164,6 @@
     "deployment branch": "deployment branch",
     "descending order": "desc order",
     "details": "details",
-    "determine": "determine",
     "device": "device",
     "device type": "device type",
     "display fields": "display fields",
@@ -2224,9 +2221,6 @@
     "failure status code": "failure status code",
     "filter by application": "filter by application",
     "filter by branch": "filter by branch",
-    "filter by calling method": "filter by calling method",
-    "filter by network type": "filter by network type",
-    "filter by registration type": "filter by registration type",
     "filter by service": "filter by service",
     "filter content": "filter content",
     "filtered based on the labels of current benchmark log": "filtered based on the labels of current benchmark log",
@@ -2263,7 +2257,6 @@
     "http status code": "http status code",
     "identification": "identification",
     "idle connections": "idle connections",
-    "independent authorization method": "independent authorization method",
     "index": "index",
     "information": "information",
     "ingress traffic monitoring": "ingress traffic monitoring",
@@ -2272,7 +2265,6 @@
     "interface description": "interface description",
     "internal network": "internal network",
     "internal network address": "internal network address",
-    "inverse selection of all apis": "inverse selection of all apis",
     "inverse selection of all endpoints": "inverse selection of all endpoints",
     "key authentication": "key authentication",
     "key authentication mode": "key authentication mode",
@@ -2425,7 +2417,6 @@
     "scene": "scene",
     "script error": "script error",
     "script execution": "script execution",
-    "search by API": "search by API",
     "search by name": "search by name",
     "search by project name": "search by project name",
     "search by service name": "search by service name",
@@ -2434,7 +2425,6 @@
     "second(s)": "second(s)",
     "security strategy": "security strategy",
     "select all": "select all",
-    "select all apis": "select all apis",
     "select all endpoints": "select all endpoints",
     "select api": "select api",
     "select application": "select application",
@@ -2452,7 +2442,6 @@
     "service monitor": "ServiceMonitor",
     "service name": "service name",
     "service request overview": "service request overview",
-    "service routing prefix": "service routing prefix",
     "service topology": "service topology",
     "set datum point": "set datum point",
     "set to benchmark log": "set to benchmark log",
@@ -2541,7 +2530,6 @@
     "weight": "weight",
     "weight configuration": "weight configuration",
     "whitelist": "whitelist",
-    "will the current service domain name": "will the current service domain name",
     "wrong duration": "wrong duration",
     "you have not added {name} in the current environment": "you have not added {name} in the current environment",
     "{num} day": "{num} day",
