--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -473,7 +473,6 @@
     "please add ": "请先添加",
     "please choose region": "请选择区域",
     "please choose vendor": "请选择云厂商",
-    "please enter IP": "请输入IP",
     "please enter a number greater than or equal to {min}": "请输入大于等于{min}的数字",
     "please enter an odd number no greater than {max}": "请输入不大于{max}的奇数",
     "please enter bucket name": "请输入bucket名称",
@@ -530,6 +529,7 @@
     "refer to template sample to input": "参考模板样例输入内容",
     "reference counts": "引用计数",
     "reference detail": "引用详情",
+    "region": "区域",
     "regions-provide-intranet-default": "所有地域（除公网地域外）默认提供内网访问方式，安全、稳定、可靠。",
     "related pod information": "关联Pod信息",
     "report name": "报告名称",
@@ -618,6 +618,7 @@
     "usage rate": "使用率",
     "used for code repositories, supports multiple repositories and choose to enable CI/CD and artifacts": "用于托管代码仓库，支持多个仓库，并可选择开启CI/CD和制品。",
     "used for site messages and mails": "用于站内信和邮件",
+    "vendor": "云厂商",
     "verification method": "认证方式",
     "virginia": "弗吉尼亚",
     "visit the link to join the organization": "访问链接来加入组织",
@@ -2000,7 +2001,6 @@
     "No abnormal transaction data sampled yet.": "暂无被采样的异常事务数据",
     "No slow transaction data sampled yet.": "暂无被采样的慢事务数据",
     "OpenAPI for partners": "面向合作伙伴开放API",
-    "Please enter API to search.": "请输入 API 查找",
     "Please enter a name consisting of letters and numbers within 20 characters.": "请输入20个字符内字母数字组成的名称",
     "Please enter a name consisting of letters, numbers and underscores within 20 characters.": "请输入20个字符内英文数字或下划线组成的名称",
     "Please enter a name consisting of letters, numbers, underscores, hyphens, slashes and dots within 50 characters.": "请输入50个字符内英文、数字、_、-、/, . 组成的名称",
@@ -2126,7 +2126,6 @@
     "confirm to cancel": "确认取消",
     "confirm to cancel the authorization of {path}": "确认取消 {path} 的授权",
     "confirm to delete this parameter": "确认删除该条参数",
-    "confirm update operation": "确定更新操作",
     "connection status": "连接状态",
     "consumer": "调用方",
     "consumer access condition": "调用方访问条件",
@@ -2152,7 +2151,6 @@
     "current span time": "当前 span 时间",
     "currently no request": "当前无请求",
     "custom address": "自定义地址",
-    "custom domain name": "自定义域名",
     "custom nginx configuration": "自定义nginx配置",
     "data collection desc": "仅 Java Agent 支持异常分析和 JVM 监控，Jaeger、Open Telemetry 等数据采集方式仅支持调用链路追踪数据的分析和展示",
     "data distribution": "数据分布",
@@ -2166,7 +2164,6 @@
     "deployment branch": "部署分支",
     "descending order": "降序",
     "details": "详情",
-    "determine": "确定",
     "device": "设备",
     "device type": "设备类型",
     "display fields": "显示字段",
@@ -2224,9 +2221,6 @@
     "failure status code": "失败状态码",
     "filter by application": "按应用过滤",
     "filter by branch": "按分支过滤",
-    "filter by calling method": "按调用方法过滤",
-    "filter by network type": "按网络类型过滤",
-    "filter by registration type": "按注册类型过滤",
     "filter by service": "按服务过滤",
     "filter content": "过滤内容",
     "filtered based on the labels of current benchmark log": "当前根据基准日志的标签进行的过滤",
@@ -2263,7 +2257,6 @@
     "http status code": "http 状态码",
     "identification": "鉴别",
     "idle connections": "idle连接数",
-    "independent authorization method": "独立授权方法",
     "index": "索引",
     "information": "信息",
     "ingress traffic monitoring": "入口流量监控",
@@ -2272,7 +2265,6 @@
     "interface description": "接口描述",
     "internal network": "内部网络",
     "internal network address": "内网地址",
-    "inverse selection of all apis": "反选全部API",
     "inverse selection of all endpoints": "反选全部流量入口",
     "key authentication": "key认证",
     "key authentication mode": "Key认证模式",
@@ -2425,7 +2417,6 @@
     "scene": "场景",
     "script error": "脚本错误",
     "script execution": "脚本执行",
-    "search by API": "输入API查找",
     "search by name": "通过名称过滤搜索",
     "search by project name": "搜索项目",
     "search by service name": "按服务名搜索",
@@ -2434,7 +2425,6 @@
     "second(s)": "秒",
     "security strategy": "安全策略",
     "select all": "选择所有",
-    "select all apis": "选择全部API",
     "select all endpoints": "选择全部流量入口",
     "select api": "选择API",
     "select application": "选择应用",
@@ -2452,7 +2442,6 @@
     "service monitor": "服务监控",
     "service name": "服务名",
     "service request overview": "服务请求概览",
-    "service routing prefix": "服务路由前缀",
     "service topology": "服务拓扑",
     "set datum point": "设置基准点",
     "set to benchmark log": "设置为基准日志",
@@ -2541,7 +2530,6 @@
     "weight": "权重",
     "weight configuration": "权重配置",
     "whitelist": "白名单",
-    "will the current service domain name": "是否将当前服务域名",
     "wrong duration": "持续时间区间错误",
     "you have not added {name} in the current environment": "当前环境您还没有添加{name}",
     "{num} day": "{num}天",
