feat(msp): drill down to the service in the topology (#3161)
* feat(msp): add jumpService from topology

* feat(msp): add eroor call

feat(msp): add eroor call

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -2193,6 +2193,7 @@
     "environments": "environments",
     "equal": "equal",
     "error analysis": "error analysis",
+    "error call": "error call",
     "error call times": "error call times",
     "error code": "error code",
     "error code tracking": "error code tracking",
