--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -2193,6 +2193,7 @@
     "environments": "环境",
     "equal": "等于",
     "error analysis": "错误分析",
+    "error call": "错误调用",
     "error call times": "错误调用次数",
     "error code": "错误码",
     "error code tracking": "错误码追踪",
