--- a/locales/zh.json
+++ b/locales/zh.json
@@ -468,6 +468,7 @@
     "export": "导出",
     "export configuration": "导出配置",
     "export format": "导出格式",
+    "export record": "导出记录",
     "export {type}": "导出 {type}",
     "exported successfully": "导出成功",
     "external": "外部",
